[gd_scene load_steps=4 format=3 uid="uid://71cfxnqhp0ne"]

[ext_resource type="Script" path="res://text_box.gd" id="1_qs0xc"]
[ext_resource type="Script" path="res://Button.gd" id="2_x2ruu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_koxgx"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_blend = true

[node name="TextBox" type="CanvasLayer"]
script = ExtResource("1_qs0xc")

[node name="TextBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 563.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="TextBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_koxgx")

[node name="MarginContainer" type="MarginContainer" parent="TextBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="TextBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxContainer/MarginContainer"]
layout_mode = 2

[node name="startLabel" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 70
text = "*"

[node name="LabelText" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "GOD MOTHA FUCKIN DAMNbb im a fuckin gggenius and it also automatically wraps text too heheheheheh"
autowrap_mode = 3

[node name="Button" type="Button" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 60
text = "esc"
flat = true
alignment = 2
icon_alignment = 1
vertical_icon_alignment = 2
script = ExtResource("2_x2ruu")

[node name="nextChar" type="Timer" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="TextBoxContainer/MarginContainer/HBoxContainer/nextChar" to="." method="_on_character_timeout"]
